[package]
name = "snapshot"
version = "0.3.0"
edition = "2024"
authors = ["Axel '0vercl0k' Souchet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0" }
chrono = "0.4.33"
clap = { version = "4.5.38", features = ["derive"] }
dbgeng = { path = "../dbgeng-rs", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140"}
windows = { version = "0.61.0", features = ["Win32_Foundation", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_Debug_Extensions", "Win32_System_SystemInformation" ] }
