[package]
name = "snapshot"
version = "0.2.4"
edition = "2024"
authors = ["Axel '0vercl0k' Souchet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0" }
chrono = "0.4.42"
clap = { version = "4.5.0", features = ["derive"] }
dbgeng = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145"}
